# research-work

./: .dockerignore  .gitignore  Dockerfile  Gemini-Data-Science.md  Gemini-Siamese Network for Image Similarity.md  README.md  clean_results.json  clip_trainer.py  evaluate_model.py  glassengine_math.md  glassengine_trainer.py  main.py  presentation_outline.md  pyproject.toml  render.yaml  results.txt  siamese_mnist_model.keras  walkthrough.md
Codes/: Siamese_cleaned.ipynb  icpc_analysis.py  streamlit_app.py  test_threshold.py
Visualization/: entropy.py  phase.py  thresholder.py
backend/: glassengine_clip_model.pkl  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
