[project]
name = "research-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python-headless>=4.11.0.86",
    "scipy>=1.16.3",
    "pillow>=10.0.0",
    "tensorflow>=2.15.0",
    "scikit-image>=0.26.0",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
    "pydantic>=2.12.5",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
]
